; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/printing/base/winspool/extr_devmode.c__FixStringW.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/printing/base/winspool/extr_devmode.c__FixStringW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i32)* @_FixStringW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_FixStringW(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i64*, i64** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = udiv i64 %9, 4
  %11 = sub i64 %10, 1
  %12 = getelementptr inbounds i64, i64* %7, i64 %11
  store i64* %12, i64** %5, align 8
  %13 = load i64*, i64** %3, align 8
  store i64* %13, i64** %6, align 8
  br label %14

14:                                               ; preds = %24, %2
  %15 = load i64*, i64** %6, align 8
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %14
  %19 = load i64*, i64** %6, align 8
  %20 = load i64*, i64** %5, align 8
  %21 = icmp eq i64* %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i64*, i64** %6, align 8
  store i64 0, i64* %23, align 8
  br label %27

24:                                               ; preds = %18
  %25 = load i64*, i64** %6, align 8
  %26 = getelementptr inbounds i64, i64* %25, i32 1
  store i64* %26, i64** %6, align 8
  br label %14

27:                                               ; preds = %22, %14
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
